answer conditions set up

--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="options" class="options">
-          <button id="option1"></button>
-          <button id="option2"></button>
-          <button id="option3"></button>
-          <button id="option4"></button>
-        </div>
+        <div id="choices" class="choices"></div>
       </div>
 
       <div id="end-screen" class="hide">
