button creation moved outside for loop

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+          <button class="button" id="A"></button>
+          <button class="button" id="B"></button>
+          <button class="button" id="C"></button>
+          <button class="button" id="D"></button>
+        </div>
       </div>
 
       <div id="end-screen" class="hide">
