--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
           <a href="highscores.html"><button id="submit">Submit</button></a>
         </p>
       </div>
-
+      <audio id="audioCorrect" src="assets/sfx/correct.wav"></audio>
+      <audio id="audioIncorrect" src="assets/sfx/incorrect.wav"></audio>
       <div id="feedback" class="feedback hide"></div>
     </div>
 
