Message added for when there are no scores to display

--- a/highscores.html
+++ b/highscores.html
@@ -13,7 +13,9 @@
     <div class="wrapper">
       <h1>Highscores</h1>
       <ol id="highscores"></ol>
-
+      <p id="noScores" class="hide">
+        There are no scores to display right now <br> <br> Take the quiz and see how you get on!
+      </p>
       <a href="index.html"><button>Go Back</button></a>
       <button id="clear">Clear Highscores</button>
     </div>
